Timeline: Make sure the header overlaps everything again
Didn't succeed while trying to fix the flyout positioning.
The problem is that since the header is a sticky element,
it's not influencing the containers offsetHeight/scrollHeight
and so there's no way to know for sure where the constraints
of the box really are. But the workaround for the user should
be straightforward anyway: Just scroll the content down again.

fixes #399

--- a/public/css/timeline.less
+++ b/public/css/timeline.less
@@ -24,7 +24,7 @@
     .time-grid-header {
       box-sizing: border-box;
       position: sticky;
-      z-index: 3; // overlap everything
+      z-index: 4; // overlap everything
       top: 0;
       height: var(--daysHeaderHeight);
     }
